# rust_wgpu_hot_reload

./: Cargo.toml  README.md  index.html  runcc.yml
.cargo/: config.toml
.github/workflows/: ci.yml
lib/: Cargo.toml
lib/src/: camera_control.rs  current_input.rs  demo.rs  demo_boids.rs  demo_polygon.rs  demo_raymarching.rs  frame_rate.rs  helpers.rs  lib.rs  mouse_input.rs  pass.rs  pipeline.rs  program.rs  reload_flags.rs  shader_builder.rs  winit_input_helper.rs
lib/src/demo_pipelines/: boids.rs  mod.rs  polygon.rs  raymarching.rs
run-wasm/: Cargo.toml
shaders/: draw.wgsl
shaders/demo_polygon/: draw.wgsl
shaders/demo_raymarching/: common.wgsl  draw.wgsl  draw_2d.wgsl  draw_3d.wgsl
shaders/demos/boids/: compute.wgsl
shaders/demos/raymarching/: camera.wgsl  common.wgsl  draw.wgsl  draw_2d.wgsl  draw_3d.wgsl
shaders/test_preprocessor/: common.wgsl  draw.wgsl  fragment_shader.wgsl  vertex_output.wgsl  vertex_shader.wgsl
src/: hot_lib.rs  main.rs  runner.rs
