[package]
name = "wgpu-hot-reload"
authors = ["Etienne"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/Azkellas/rust_wgpu_hot_reload"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Azkellas/rust_wgpu_hot_reload"
description = "A template rust project to be productive in wgpu, with hot reload and wasm export"
keywords = ["wgpu", "hot-reload", "wasm", "template"]

[workspace]
resolver = "2"
members = ["lib"]

[dependencies]
lib = { path = "./lib" }
hot-lib-reloader = { version = "^0.6", optional = true }
wgpu = "0.17.0"
winit = "0.28.6"
env_logger = "0.10.0"
pollster = "0.3.0"
log = "0.4.19"
egui = { git = "https://github.com/emilk/egui.git", rev = "b896d641c578c04603adf07a9350b8bfc3c7ed9f" }
egui-wgpu = { git = "https://github.com/emilk/egui.git", features = [
    "winit",
], rev = "b896d641c578c04603adf07a9350b8bfc3c7ed9f" }
egui-winit = { git = "https://github.com/emilk/egui.git", default-features = false, rev = "b896d641c578c04603adf07a9350b8bfc3c7ed9f" }
wasm-bindgen = "0.2.87"
# egui = "0.22.0" not compatible with wgpu 0.17 yet
# egui-wgpu = "0.22.0" not compatible with wgpu 0.17 yet
# egui-winit = "0.22.0" not compatible with wgpu 0.17 yet

[features]
reload = ["dep:hot-lib-reloader"]

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 1

[target.'cfg(not(target_family = "wasm"))'.dependencies]
notify = "6.0.1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
