[package]
name = "wgpu-hot-reload"
authors = ["Etienne"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/Azkellas/rust_wgpu_hot_reload"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Azkellas/rust_wgpu_hot_reload"
description = "A template rust project to be productive in wgpu, with hot reload and wasm export"
keywords = ["wgpu", "hot-reload", "wasm", "template"]

[workspace]
resolver = "2"
members = ["lib"]

[workspace.dependencies]
wgpu = { version = "0.17.1", default-features = false }
egui = "0.23.0"
pollster = "0.3.0"
log = "0.4.19"
winit = "0.28.7"


[dependencies]
wgpu.workspace = true
egui.workspace = true
pollster.workspace = true
log.workspace = true
winit.workspace = true
lib = { path = "./lib" }
hot-lib-reloader = { version = "^0.6", optional = true }

env_logger = "0.10.0"
wasm-bindgen = "0.2.88"

egui-wgpu = { version = "0.23.0", features = ["winit"] }
egui-winit = { version = "0.24.0", default-features = false }


[features]
webgl = ["wgpu/webgl", "lib/webgl"]
wgsl = ["wgpu/wgsl", "lib/wgsl"]
default = ["wgsl"]
reload = ["dep:hot-lib-reloader"]


[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 1

[target.'cfg(not(target_family = "wasm"))'.dependencies]
notify = "6.0.1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = "0.4.37"
web-sys = "=0.3.64"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
