[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu.workspace = true
egui.workspace = true
pollster.workspace = true
log.workspace = true
bytemuck = "1.13.1"
instant = "0.1.12"
nanorand = { version = "0.7", default-features = false, features = ["wyrand"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rust-embed = "8.0.0" # Enable shader hot reload for native compilation.

[target.'cfg(target_family = "wasm")'.dependencies]
# Embed shaders in wasm.
rust-embed = { version = "8.0.0", features = ["debug-embed"] }

[features]
webgl = ["wgpu/webgl"]
wgsl = ["wgpu/wgsl"]
default = ["wgsl"]
