[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
winit.workspace = true
wgpu.workspace = true
egui.workspace = true
pollster.workspace = true
log.workspace = true
winit_input_helper.workspace = true
bytemuck = { version = "1.18.0", features = ["derive"] }
nanorand = { version = "0.7", default-features = false, features = ["wyrand"] }
web-time = "1.1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rust-embed = "8.5.0" # Enable shader hot reload for native compilation.

[target.'cfg(target_family = "wasm")'.dependencies]
# Embed shaders in wasm.
rust-embed = { version = "8.4.0", features = ["debug-embed"] }
